[build-system]
requires = ["setuptools >= 75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sagesim"
version = "0.6.0"
dynamic = ["dependencies"]

requires-python = ">=3.11"
authors = [
  {name = "Xi Zhang", email = "cc.zhang1992@gmail.com"},
  {name = "Chathika Gunaratne", email = "chathikagunaratne@gmail.com"}

]
maintainers = [
  {name = "Xi Zhang", email = "cc.zhang1992@gmail.com"}
]

description = "Scalable Agent-based GPU Enabled Simulator."

readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

keywords = ["agent-based", "hpc", "gpu"]

[tool.setuptools.packages.find]
where = ["."]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/ornl/sagesim.git"
